--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		
+
 		<style>
+			*{
+				margin: 0px 0px 0px 0px;
+				padding: 0px 0px 0px 0px;
+			}
+		
 			#ballUI{
 				border-radius: 50%;
-				border: 1px solid;
+				box-shadow: 0px 0px 35px rgb(255,255,255);
+				margin: auto;
+				position: absolute;
+				top: 30%;
+				left: 0;
+				right: 0;
+			}
+			
+			#main{
+				width: 100%;
+				height: 100%;
+				background-color: grey;
+				position: absolute;
 			}
 		</style>
 	</head>
+
 	<body>
-		
+
 		<!--
         	作者：XiWenRen
         	时间：2014-09-23
@@ -21,9 +40,10 @@
         	2.为了控件系显示效果丰富，分割线最好能够做成动态，如水波荡漾，分隔的两段用不同颜色显示。暂时最佳构思是把分隔线做成类似两股能量相撞相抵的感觉，但能力有限，只能尽力了。
         	3.js水平有限呐
         -->
-        
-        <canvas id="ballUI" height="200" width="200">你的浏览器不支持HTML5 canvas技术</canvas>
-		
+		<div id="main">
+			<canvas id="ballUI" height="200" width="200">你的浏览器不支持HTML5 canvas技术</canvas>
+		</div>
 		<script src="js/ball.js"></script>
 	</body>
+
 </html>
