--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			#ballUI{
 				border-radius: 50%;
 				box-shadow: 0px 0px 35px rgb(255,255,255);
+				background-color: rgba(255,255,255,1);
 				margin: auto;
 				position: absolute;
 				top: 30%;
@@ -39,6 +40,13 @@
         	1.控件以一条线分隔为两块，以记账为例，总现金或者总预算作为整个圆的直径，左侧为已支出，右侧为剩余
         	2.为了控件系显示效果丰富，分割线最好能够做成动态，如水波荡漾，分隔的两段用不同颜色显示。暂时最佳构思是把分隔线做成类似两股能量相撞相抵的感觉，但能力有限，只能尽力了。
         	3.js水平有限呐
+        	9-24
+        	有新的想法要记录下来
+        	今天使用了一下番茄土豆，好像这个东西已经直接向着我的番茄去了，不管了，做完了再抽出来用吧
+        	在使用番茄土豆的时候有些新功能的想法
+        	1.添加任务模式，然后为任务分配番茄，一个任务可以分配1~N个番茄这样
+        	2.多线程任务，由于工作中不很难有在一段时间内只做一件事情，时常处理突发事件，所以可以在一个番茄进行过程中，暂停番茄，然后开始另一个任务的番茄，等第二个任务完成后，可以继续之前的番茄
+        	3.每日结算，这个再说吧，没想好
         -->
 		<div id="main">
 			<canvas id="ballUI" height="200" width="200">你的浏览器不支持HTML5 canvas技术</canvas>
