--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<div id="main">
 			<canvas id="ballUI" height="200" width="200">你的浏览器不支持HTML5 canvas技术</canvas>
 		</div>
+		<script type="text/javascript" src="js/Coordinator.js" ></script>
 		<script src="js/ball.js"></script>
 	</body>
 
