--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			.round{
 				position: absolute;
 				border-radius: 50%;
+				border: 0px solid rgba(255,255,255,0.9);
 				box-shadow: 0px 0px 10px rgba(255,255,255,0.8);
 				-webkit-animation: roundFlash 0.8s;
 				}
