--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				margin: 0px 0px 0px 0px;
 				padding: 0px 0px 0px 0px;
 			}
-		
+
 			#ballUI{
 				border-radius: 50%;
 				background-color: rgba(255,255,255,1);
@@ -18,7 +18,7 @@
 				position: absolute;
 				-webkit-animation: ballFlash 3s infinite ease;
 			}
-			
+
 			.unit{
 				width: 200px;
 				height: 200px;
@@ -42,26 +42,23 @@
 			.round{
 				position: absolute;
 				border-radius: 50%;
-				box-shadow: 0px 0px 10px rgba(255,255,255,0.8);
-				-webkit-animation: roundFlash 0.8s;
+				transform-origin: center;
+				box-sizing: border-box;
 				}
-			
+
 			@keyframes roundFlash{
-				0% {-webkit-transform: scale(1);}
-				50% {-webkit-transform: scale(1.2);
+				0% {transform: scale(0);}
+				80% {transform: scale(1.2);
 					box-shadow: 0px 0px 30px rgba(255,255,255,1);
 				}
-				100% {-webkit-transform: scale(1);}
-			}
-			
-			@-webkit-keyframes roundFlash{
-				0% {-webkit-transform: scale(1);}
-				50% {-webkit-transform: scale(1.2);
-					box-shadow: 0px 0px 30px rgba(255,255,255,1);
+				90%{
+					opacity: 1;
 				}
-				100% {-webkit-transform: scale(1);}
+				100% {
+					transform: scale(1);
+					opacity: 0;
+				}
 			}
-			
 			@-webkit-keyframes ballFlash{
 				0% {-webkit-transform: scale(1);}
 				50% {-webkit-transform: scale(1);
@@ -96,7 +93,7 @@
 				<!--<div class="round"></div>-->
 			</div>
 		</div>
-		
+
 		<script type="text/javascript" src="js/Coordinator.js" ></script>
 		<script src="js/ball.js"></script>
 	</body>
